✨ Add cards mode association
