# gamemode/routes.go
@@ -14,6 +14,7 @@ func (config *Config) Routes() *chi.Mux {
 
 	router.Get("/", config.GetAll)
 	router.Post("/", config.Create)
+	router.Put("/{id}", config.Update)
 
 	return router
 }
